...
                value: user.credits.toString(),
                icon: LucideIcons.zap,
                baseColor: Colors.indigo,
                isGradient: true,
              ),
              StatCard(
                title: "Genius Points",
                value: user.points.toString(),
                icon: LucideIcons.trophy,
                baseColor: Colors.orange,
                isGradient: true,
              ),
              StatCard(
...
